tests/errors/trailing_comma_in_multiline.php
<?php

declare(strict_types=1);

$a = [
    'hello',
    'yo'
];

class A {
    public function analyse(
        $a,
        $b,
        $c
    ) {
    }
}
